--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,3 +15,13 @@
 ul {
   list-style: none;
 }
+
+
+.bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url('/bg1.jpg') no-repeat center center;
+}
