--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,19 +3,19 @@
 }
 
 .swal2-container {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .swal2-select {
-    border: 1px solid rgb(0 0 0 / 31%);
-    border-radius: 5px;
-    width: 80%;
+  border: 1px solid rgb(0 0 0 / 31%);
+  border-radius: 5px;
+  width: 80%;
 }
 
 ul {
   list-style: none;
 }
-
 
 .bg {
   width: 100%;
@@ -23,9 +23,9 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
-  background: url('/bg1.jpg') no-repeat center center;
+  background: url('/bg2.png') no-repeat center center;
+  background-size: 100%;
 }
-
 
 .v-dialog--scrollable .theme--light .v-card__text::-webkit-scrollbar {
   width: 10px;
@@ -41,7 +41,9 @@ ul {
   border-radius: 7px;
 }
 
-.v-dialog--scrollable .theme--light .v-card__text::-webkit-scrollbar-thumb:hover {
+.v-dialog--scrollable
+  .theme--light
+  .v-card__text::-webkit-scrollbar-thumb:hover {
   background: #686464;
   border: solid 3px #e6e6e645;
 }
@@ -61,7 +63,21 @@ ul {
   border-radius: 7px;
 }
 
-.v-dialog--scrollable .theme--dark .v-card__text::-webkit-scrollbar-thumb:hover {
+.v-dialog--scrollable
+  .theme--dark
+  .v-card__text::-webkit-scrollbar-thumb:hover {
   background: white;
 }
 
+.no-select {
+  /* If you want to implement it in very old browser-versions */
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+
+  /* The rule below is not implemented in browsers yet */
+  -o-user-select: none;
+
+  /* The rule below is implemented in most browsers by now */
+  user-select: none;
+}
