--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,6 +27,15 @@ ul {
   background-size: 100%;
 }
 
+.page-gray {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #f7f7f7;
+}
+
 .v-dialog--scrollable .theme--light .v-card__text::-webkit-scrollbar {
   width: 10px;
 }
